--- a/client/src/App.css
+++ b/client/src/App.css
@@ -404,3 +404,14 @@ button, .add-line-btn {
   font-size: 15px;
   margin-top: 6px;
 }
+:root {
+  --bg-color: #ffffff;
+  --border-color: #dddddd;
+  --glow-color: #202020;
+}
+
+.dark {
+  --bg-color: #121212;
+  --border-color: #333333;
+  --glow-color: #f5f5f5;
+}
