--- a/client/src/components/Header.css
+++ b/client/src/components/Header.css
@@ -1,4 +1,7 @@
 .header {
+  position: sticky;
+  top: 0;
+  z-index: 1000;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -32,14 +35,14 @@
   background: none;
   border: none;
   cursor: pointer;
-  padding: 12.5px;
+  padding: 15px;
   transition: background 0.2s ease, transform 0.2s ease;
   z-index: 2;
 }
 
 .toggle-icon {
-  width: 50px;
-  height: 50px;
+  width: 45px;
+  height: 45px;
   transition: transform 0.3s ease, filter 0.3s ease;
 }
 
